# neuralwork

./: .gitignore  CMakeLists.txt
include/neuralwork/: NeuralNetwork.hpp
include/neuralwork/datatypes/: matrix.hpp  neuralLayer.hpp  neuron.hpp  neuronLayer.hpp  sigmoid.hpp  vector.hpp
include/neuralwork/datatypes/activationFunctions/: ActivationFunction.hpp  Sigmoid.hpp
src/: main.cpp
src/datatypes/activationFunctions/: Sigmoid.cpp
tests/: CMakeLists.txt
tests/datatypes/: matrixTest.cpp  vectorTest.cpp
